# siphon

./: LICENSE  README.md  pyproject.toml
siphon/: main.py  storage.py
siphon/scrapers/: snapchat.py
siphon/scripts/: appium_server.py
